fixed date error. have collapsable items sorted by exp date

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,11 @@ a:hover {
 }
 
 .item {
+	margin: 3px 15px;
+	opacity: .9;
+}
+
+.itemHeader {
 	margin: 3px;
 	opacity: .9;
 }
@@ -42,12 +47,12 @@ a:hover {
 	/*color: #a94442;*/
 }
 
-.item .info {
+.item .info, .itemHeader .info {
 	float: left;
 	margin-left: 10px;
 }
 
-.item h4 {
+.item h4, .itemHeader h4{
 	display: inline;
 	margin-right: 10px;
 }
